; ModuleID = '/home/carl/AnghaBench/kphp-kdb/letters/extr_letters-engine.c_sigusr1_handler.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/letters/extr_letters-engine.c_sigusr1_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@__const.sigusr1_handler.message = private unnamed_addr constant [27 x i8] c"got SIGUSR1, rotate logs.\0A\00", align 16
@pending_signals = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @sigusr1_handler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sigusr1_handler(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca [27 x i8], align 16
  store i32 %0, i32* %2, align 4
  %4 = bitcast [27 x i8]* %3 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 16 %4, i8* align 16 getelementptr inbounds ([27 x i8], [27 x i8]* @__const.sigusr1_handler.message, i32 0, i32 0), i64 27, i1 false)
  %5 = getelementptr inbounds [27 x i8], [27 x i8]* %3, i64 0, i64 0
  %6 = call i32 @kwrite(i32 2, i8* %5, i32 26)
  %7 = load i32, i32* %2, align 4
  %8 = zext i32 %7 to i64
  %9 = shl i64 1, %8
  %10 = load i64, i64* @pending_signals, align 8
  %11 = or i64 %10, %9
  store i64 %11, i64* @pending_signals, align 8
  %12 = load i32, i32* %2, align 4
  %13 = call i32 @signal(i32 %12, void (i32)* @sigusr1_handler)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @kwrite(i32, i8*, i32) #2

declare dso_local i32 @signal(i32, void (i32)*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
